--- a/Client/stil.css
+++ b/Client/stil.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
+
 .GlavniKontejner
 {
     display: flex;
     flex-direction: row;
+}
+*
+{
+    font-family: 'Luxurious Roman', cursive;
+    font-weight: 1000;
 }
 
 .Forma{
@@ -45,4 +52,13 @@ table{
 
 button{
     margin-top: 8px;
+    border-radius: 5px;
+}
+
+select{
+    border-radius: 5px;
+}
+
+input{
+    border-radius: 5px;
 }
